실시간 베스트상품 웹소켓적용, 상품구매시 포인트적립,